test/FAIL/exitcmd/01_test_exit.emu
#-------
#TEST_RETURN_CODE=FAIL           
#TEST_COMMENT="unknown command"
#-------

lqsh exit
